# drift

./: .dockerignore  .env.example  .gitignore  ALERTING.md  ARCHITECTURE.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
compose/: scrape.yaml
drift-agent/: .dockerignore  .env.example  Dockerfile  entrypoint.sh  pyproject.toml
drift-agent/alembic/: env.py
drift-agent/alembic/versions/: 0001_initial.py  0002_device_group.py  0003_registry_credentials.py  0004_deployment_max_retries.py  0005_users_sessions_groups.py  0006_devices_facts.py  0007_registry_credentials_group_id.py  0008_terminal_sessions.py  0009_deployment_targets_pending_restart.py  0010_devices_tags.py  0011_device_fingerprint_and_normalize.py  0012_operator_filters.py  0013_operator_filters_visibility.py  0014_operator_filter_mutes.py  0015_tunnel_sessions.py  0016_telegram.py
drift-agent/app/: agent.py  config.py  demo.py  main.py  models_meta.py  schemas.py
drift-agent/app/admin/: llm_settings.py  routes.py  updates.py
drift-agent/app/deploy/: auth.py  bundles.py  db.py  models.py  naming.py  observability.py  routes_admin.py  routes_agent.py  schemas.py  secrets.py  security.py  seed.py  tagging.py  terminal.py  tunnel.py  tunnel_proxy.py
drift-agent/app/filters/: routes.py
drift-agent/app/telegram/: alerts.py  api.py  bot.py  links.py  routes.py
drift-agent/app/tools/: alerts.py  analysis.py  deploy.py  emit.py  filters.py  logs.py  metrics.py  users.py
(+149 files in other folders)
