[project]
name = "drift-agent"
version = "0.1.0"
description = "Agentic observability backend for Drift — Claude + tool use over time-series telemetry"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "litellm>=1.63.0",
    "packaging>=24.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "numpy>=2.1.0",
    "scipy>=1.14.0",
    "pyyaml>=6.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "boto3>=1.34",
    "prometheus-client>=0.20",
    "segno>=1.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
